--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 </video>
                             </div>
                             <div class="card-content">
-                                <h3>2nd Place In BackEnd Programming</h3>
+                                <h3>2ND PLACE IN BACKEND PROGRAMMING</h3>
                                 <p>Developed the entire core gameplay logic, managing real-time state transitions and event handling.
 
                                     Implemented essential game features including:
